Second commit: header/navigation sections, css body/header styling

--- a/index.html
+++ b/index.html
@@ -7,5 +7,18 @@
   </head>
   <body>
 
+    <!-- Header section -->
+    <header class="flex-container">
+      <img src="./resources/images/img-tea-cozy-logo.png" alt="Tea Cozy Logo">
+      <nav>
+        <span><a href="#mission">Mission</a></span>
+        <span><a href="#items">Featured Tea</a></span>
+        <span><a href="#locations">Locations</a></span>
+      </nav>
+    </header>
+
+    <!-- Main content section -->
+
+    
   </body>
 </html>
