--- a/index.html
+++ b/index.html
@@ -18,7 +18,16 @@
     </header>
 
     <!-- Main content section -->
+    <div class="main" class="flex-container" >
 
-    
+    <!-- Mission container -->
+      <div id="mission" class="flex-container">
+        <div class="content">
+          <h2>Our Mission</h2>
+          <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+        </div>
+      </div>
+    </div>
+
   </body>
 </html>
