--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <img src="./resources/images/img-tea-cozy-logo.png" alt="Tea Cozy Logo">
       <nav>
         <span><a href="#mission">Mission</a></span>
-        <span><a href="#items">Featured Tea</a></span>
+        <span><a href="#store">Featured Tea</a></span>
         <span><a href="#locations">Locations</a></span>
       </nav>
     </header>
@@ -29,5 +29,17 @@
       </div>
     </div>
 
+    <!-- Store container -->
+    <div id="store">
+      <h2>Tea of the Month</h2>
+      <h4>What's Steeping at The Tea Cozy?</h4>
+      <div class="flex-container">
+        <div class="item"><img src="./resources/images/img-berryblitz.jpg" alt="Fall Berry Blitz Tea"><span>Fall Berry Blitz Tea</span></div>
+        <div class="item"><img src="./resources/images/img-spiced-rum.jpg" alt="Spiced Rum Tea"><span>Spiced Rum Tea</span></div>
+        <div class="item"><img src="./resources/images/img-donut.jpg" alt="Donut"><span>Seasonal Donuts</span></div>
+        <div class="item"><img src="./resources/images/img-myrtle-ave.jpg" alt="Myrtle Ave Tea"><span>Myrtle Ave Tea</span></div>
+        <div class="item"><img src="./resources/images/img-bedford-bizarre.jpg" alt="Bedford Bizarre Tea"><span>Bedford Bizarre Tea</span></div>
+      </div>
+    </div>
   </body>
 </html>
