--- a/index.html
+++ b/index.html
@@ -27,18 +27,44 @@
           <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
         </div>
       </div>
-    </div>
+
 
     <!-- Store container -->
-    <div id="store">
-      <h2>Tea of the Month</h2>
-      <h4>What's Steeping at The Tea Cozy?</h4>
-      <div class="flex-container">
-        <div class="item"><img src="./resources/images/img-berryblitz.jpg" alt="Fall Berry Blitz Tea"><span>Fall Berry Blitz Tea</span></div>
-        <div class="item"><img src="./resources/images/img-spiced-rum.jpg" alt="Spiced Rum Tea"><span>Spiced Rum Tea</span></div>
-        <div class="item"><img src="./resources/images/img-donut.jpg" alt="Donut"><span>Seasonal Donuts</span></div>
-        <div class="item"><img src="./resources/images/img-myrtle-ave.jpg" alt="Myrtle Ave Tea"><span>Myrtle Ave Tea</span></div>
-        <div class="item"><img src="./resources/images/img-bedford-bizarre.jpg" alt="Bedford Bizarre Tea"><span>Bedford Bizarre Tea</span></div>
+      <div id="store">
+        <h2>Tea of the Month</h2>
+        <h4>What's Steeping at The Tea Cozy?</h4>
+        <div class="flex-container">
+          <div class="item"><img src="./resources/images/img-berryblitz.jpg" alt="Fall Berry Blitz Tea"><span>Fall Berry Blitz Tea</span></div>
+          <div class="item"><img src="./resources/images/img-spiced-rum.jpg" alt="Spiced Rum Tea"><span>Spiced Rum Tea</span></div>
+          <div class="item"><img src="./resources/images/img-donut.jpg" alt="Donut"><span>Seasonal Donuts</span></div>
+          <div class="item"><img src="./resources/images/img-myrtle-ave.jpg" alt="Myrtle Ave Tea"><span>Myrtle Ave Tea</span></div>
+          <div class="item"><img src="./resources/images/img-bedford-bizarre.jpg" alt="Bedford Bizarre Tea"><span>Bedford Bizarre Tea</span></div>
+        </div>
+      </div>
+
+      <!-- locations container -->
+      <div id="locations">
+        <h2>Locations</h2>
+        <div class="flex-container locations">
+          <div class="location">
+            <h3>Downtown</h3>
+            <p>384 West 4th St</p>
+            <p>Suite 108</p>
+            <p>Portland, Maine</p>
+          </div>
+          <div class="location">
+            <h3>East Bayside</h3>
+            <p>3433 Phisherman's Avenue</p>
+            <p>(Northwest Corner)</p>
+            <p>Portland, Maine</p>
+          </div>
+          <div class="location">
+            <h3>Oakdale</h3>
+            <p>515 Crescent Avenue</p>
+            <p>Second Floor</p>
+            <p>Portland, Maine</p>
+          </div>
+        </div>
       </div>
     </div>
   </body>
