Added the contact and footer sections with css

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Main content section -->
     <div class="main" class="flex-container" >
 
-    <!-- Mission container -->
+      <!-- Mission container -->
       <div id="mission" class="flex-container">
         <div class="content">
           <h2>Our Mission</h2>
@@ -29,7 +29,7 @@
       </div>
 
 
-    <!-- Store container -->
+      <!-- Store container -->
       <div id="store">
         <h2>Tea of the Month</h2>
         <h4>What's Steeping at The Tea Cozy?</h4>
@@ -67,5 +67,19 @@
         </div>
       </div>
     </div>
+    <!-- End of Main Content Section -->
+
+    <!-- Contact container -->
+    <div id="contact">
+      <h2>The Tea Cozy</h2>
+      <h5>contact@theteacozy.com</h5>
+      <h5>917-555-8904</h5>
+    </div>
+
+    <!-- Footer Cotainer -->
+    <footer>
+      <h5>copyright The Tea Cozy 2017</h5>
+    </footer>
+
   </body>
 </html>
